--- a/people.html
+++ b/people.html
@@ -75,27 +75,6 @@
 
 
 
-   <hr>
-
-   <section id="staff">
-      <div class="page-header">
-         <h3>Principal Investigator</h3>
-      </div>
-      <div class="row">
-         <div class="col-md-3">
-            <img src="thumbs/Photo_Quentin.jpeg" alt="Quentin" class="img-fluid"/>
-         </div>
-         <div class="col-md-9">
-            <h4>Quentin Zhen QIN 秦震 Ph.D.</h4>
-            <p>Quentin is an Assistant Professor...</p>
-            <p><b>Email:</b> <a href="mailto:hmzqin@ust.hk">hmzqin@ust.hk</a></p>
-            <p><b><a href="https://sites.google.com/site/qinzhenquentin/">Personal Website</a>, <a href="files/C.V._Zhen Qin_Research.pdf">Curriculum Vitae</a></b></p>
-         </div>
-      </div>
-   </section>
-
-   <hr>
-
 <hr>
 
 <section id="staff">
@@ -104,11 +83,11 @@
    </div>
    <div class="row">
       <div class="col-md-3">
-         <img src="thumbs/Photo_Quentin.jpeg" alt="Quentin" class="img-fluid float-left" style="max-width: 150px; margin-right: 20px;"/>
+         <img src="thumbs/Photo_Quentin.jpeg" alt="Quentin" class="img-fluid" style="max-width: 150px; margin-right: 20px; float: left;"/>
       </div>
-      <div class="col-md-9">
+      <div class="col-md-9" style="clear: both;">
          <h4 style="text-align: left;">Quentin Zhen QIN 秦震 Ph.D.</h4>
-         <p>Quentin is an Assistant Professor of Linguistics in the Division of Humanities at the Hong Kong University of Science and Technology. He is also Associate Director of ​Center for Chinese Linguistics and a faculty associate of Center for Aging Science, HKUST. He got his Ph.D degree in Linguistics from the Department of Linguistics, University of Kansas. Prior to joining the faculty at HKUST, he worked as Postdoctoral Researcher at the Research Center for Language, Cognition, and Neuroscience, Hong Kong Polytechnic University.</p>
+         <p style="text-align: left;">Quentin is an Assistant Professor of Linguistics in the Division of Humanities at the Hong Kong University of Science and Technology. He is also Associate Director of ​Center for Chinese Linguistics and a faculty associate of Center for Aging Science, HKUST. He got his Ph.D degree in Linguistics from the Department of Linguistics, University of Kansas. Prior to joining the faculty at HKUST, he worked as Postdoctoral Researcher at the Research Center for Language, Cognition, and Neuroscience, Hong Kong Polytechnic University.</p>
          <p><b>Email:</b> <a href="mailto:hmzqin@ust.hk">hmzqin@ust.hk</a></p>
          <p><b><a href="https://sites.google.com/site/qinzhenquentin/">Personal Website</a>, <a href="https://orcid.org/0000-0002-6117-7809">ORCID ID</a>, <a href="files/C.V._Zhen Qin_Research.pdf">Curriculum Vitae</a></b></p>
       </div>
@@ -123,12 +102,12 @@
    </div>
    <div class="row">
       <div class="col-md-3">
-         <img src="thumbs/Photo_Susu.jpg" alt="Susu Lai" class="img-fluid float-left" style="max-width: 150px; margin-right: 20px;"/>
+         <img src="thumbs/Photo_Susu.jpg" alt="Susu Lai" class="img-fluid" style="max-width: 150px; margin-right: 20px; float: left;"/>
       </div>
-      <div class="col-md-9">
+      <div class="col-md-9" style="clear: both;">
          <h4 style="text-align: left;">Susu LAI 賴素素 (BA: Hunan U; MA: HKU)</h4>
-         <p><i>Lab Manager & Research Assistant</i></p>
-         <p>Susu graduated from the University of Hong Kong with an MA degree in Linguistics. She has a strong interest in psycholinguistics, specifically understanding how individuals acquire and process the prosodic features of a second language. In her previous research project, she explored implicit learning of lexical stress in second language acquisition. She is currently involved in an EEG study on L2 learners' consolidation of Cantonese tones during daytime naps.</p>
+         <p style="text-align: left;"><i>Lab Manager & Research Assistant</i></p>
+         <p style="text-align: left;">Susu graduated from the University of Hong Kong with an MA degree in Linguistics. She has a strong interest in psycholinguistics, specifically understanding how individuals acquire and process the prosodic features of a second language. In her previous research project, she explored implicit learning of lexical stress in second language acquisition. She is currently involved in an EEG study on L2 learners' consolidation of Cantonese tones during daytime naps.</p>
          <p><b>Email:</b> <a href="mailto:hmsusu@ust.hk">hmsusu@ust.hk</a></p>
          <p><b><a href="https://www.researchgate.net/profile/Susu-Lai">ResearchGate</a>, <a href="files/CV_Susu LAI.pdf">Curriculum Vitae</a></b></p>
       </div>
@@ -138,12 +117,12 @@
 
    <div class="row">
       <div class="col-md-3">
-         <img src="thumbs/Photo_Jiayu.jpg" alt="Jiayu Liang" class="img-fluid float-left" style="max-width: 150px; margin-right: 20px;"/>
+         <img src="thumbs/Photo_Jiayu.jpg" alt="Jiayu Liang" class="img-fluid" style="max-width: 150px; margin-right: 20px; float: left;"/>
       </div>
-      <div class="col-md-9">
+      <div class="col-md-9" style="clear: both;">
          <h4 style="text-align: left;">Jiayu LIANG 梁家瑜 (BA: Shandong U)</h4>
-         <p><i>Research Assistant</i></p>
-         <p>Jiayu holds a BA in English from Shandong University. Her research interests focus on the production and perception of non-native languages, as well as the cross-domain transfer effects between music and language experience. For her undergraduate thesis, Jiayu employed eye-tracking methodology to investigate how Mandarin speakers' musical aptitude influences their perception and production of English vowels. Currently, she is involved in an eye-tracking study examining L2 learners' perceptual learning and consolidation of English lexical stress.</p>
+         <p style="text-align: left;"><i>Research Assistant</i></p>
+         <p style="text-align: left;">Jiayu holds a BA in English from Shandong University. Her research interests focus on the production and perception of non-native languages, as well as the cross-domain transfer effects between music and language experience. For her undergraduate thesis, Jiayu employed eye-tracking methodology to investigate how Mandarin speakers' musical aptitude influences their perception and production of English vowels. Currently, she is involved in an eye-tracking study examining L2 learners' perceptual learning and consolidation of English lexical stress.</p>
          <p><b>Email:</b> <a href="mailto:hmjyliang@ust.hk">hmjyliang@ust.hk</a></p>
          <p><b><a href="https://lexie-liang.github.io/LiangJiayu.github.io/">Personal Website</a>, <a href="https://www.researchgate.net/profile/Jiayu-Liang-14">ResearchGate</a>, <a href="files/CV_Jiayu LIANG.pdf">Curriculum Vitae</a></b></p>
       </div>
@@ -158,12 +137,12 @@
    </div>
    <div class="row">
       <div class="col-md-3">
-         <img src="thumbs/Photo_Jeremy.jpg" alt="Jeremy, Yin To CHUI" class="img-fluid float-left" style="max-width: 150px; margin-right: 20px;"/>
+         <img src="thumbs/Photo_Jeremy.jpg" alt="Jeremy, Yin To CHUI" class="img-fluid" style="max-width: 150px; margin-right: 20px; float: left;"/>
       </div>
-      <div class="col-md-9">
+      <div class="col-md-9" style="clear: both;">
          <h4 style="text-align: left;">Jeremy, Yin To CHUI 徐彥韜 (BA: CUHK; MA: PolyU; MPhil: UST)</h4>
-         <p><i>Ph.D Student (HKPFS awardee)</i></p>
-         <p>Jeremy graduated with an MA degree in Teaching Chinese as a Foreign Language from HK PolyU. He is interested in speech perception as well as the cognitive and computational mechanisms behind perceptual learning. Currently, he is working on whether, and to what extent, younger and older adults make statistical inferences (e.g., distributional information, word-referent co-occurrences) in the implicit perceptual learning L2 lexical tone categories. His previous MPhil project studied the statistical learning of Mandarin lexical tones and how individual differences played a role in learning. Jeremy's PhD study is funded by the Hong Kong PhD Fellowship.</p>
+         <p style="text-align: left;"><i>Ph.D Student (HKPFS awardee)</i></p>
+         <p style="text-align: left;">Jeremy graduated with an MA degree in Teaching Chinese as a Foreign Language from HK PolyU. He is interested in speech perception as well as the cognitive and computational mechanisms behind perceptual learning. Currently, he is working on whether, and to what extent, younger and older adults make statistical inferences (e.g., distributional information, word-referent co-occurrences) in the implicit perceptual learning L2 lexical tone categories. His previous MPhil project studied the statistical learning of Mandarin lexical tones and how individual differences played a role in learning. Jeremy's PhD study is funded by the Hong Kong PhD Fellowship.</p>
          <p><b>Email:</b> <a href="mailto:ytchuiac@connect.ust.hk">ytchuiac@connect.ust.hk</a></p>
          <p><b><a href="https://www.researchgate.net/profile/Yin-To-Chui">ResearchGate</a>, <a href="https://orcid.org/0000-0002-2169-086X">ORCID ID</a>, <a href="files/CV_Jeremy.pdf">Curriculum Vitae</a></b></p>
       </div>
@@ -178,11 +157,11 @@
    </div>
    <div class="row">
       <div class="col-md-3">
-         <img src="thumbs/Photo_Cindy.png" alt="Cindy, Rui JIN" class="img-fluid float-left" style="max-width: 150px; margin-right: 20px;"/>
+         <img src="thumbs/Photo_Cindy.png" alt="Cindy, Rui JIN" class="img-fluid" style="max-width: 150px; margin-right: 20px; float: left;"/>
       </div>
-      <div class="col-md-9">
+      <div class="col-md-9" style="clear: both;">
          <h4 style="text-align: left;">Cindy, Rui JIN 金蕊 (Senior Research Assistant, 2021-2022)</h4>
-         <p>Cindy is currently a Ph.D student in Psychology at the University of Florida.</p>
+         <p style="text-align: left;">Cindy is currently a Ph.D student in Psychology at the University of Florida.</p>
       </div>
    </div>
 
@@ -190,11 +169,11 @@
 
    <div class="row">
       <div class="col-md-3">
-         <img src="thumbs/Photo_Ruofan_edited.jpg" alt="Ruofan Wu" class="img-fluid float-left" style="max-width: 150px; margin-right: 20px;"/>
+         <img src="thumbs/Photo_Ruofan_edited.jpg" alt="Ruofan Wu" class="img-fluid" style="max-width: 150px; margin-right: 20px; float: left;"/>
       </div>
-      <div class="col-md-9">
+      <div class="col-md-9" style="clear: both;">
          <h4 style="text-align: left;">Ruofan WU 吳若繁 (Research Assistant, 2022-2023)</h4>
-         <p>Ruofan is currently a Ph.D student at the Hong Kong Polytechnic University.</p>
+         <p style="text-align: left;">Ruofan is currently a Ph.D student at the Hong Kong Polytechnic University.</p>
       </div>
    </div>
 </section>
