--- a/people.html
+++ b/people.html
@@ -76,6 +76,27 @@
 
 
 <hr>
+<div class="span8 offset1">
+   <section id="principalinvestigator">
+      <div class="page-header">
+         <h3>Principal Investigator</h3>
+      </div>
+      <div class="row-fluid">
+         <div class="span3">
+            <img src="thumbs/photo_caicaizhang1.jpg" alt="Caicai Zhang" style="max-width: 150px; margin-right: 20px; float: left;" />
+         </div>
+         <div class="span9">
+            <h4 style="text-align: left;">Caicai ZHANG</h4>
+            <p style="text-align: left;">Associate Professor, Departmental Research Committee Deputy Chair & RPg Programme Leader, <a href="https://www.polyu.edu.hk/cbs/">Department of Chinese and Bilingual Studies</a>, The Hong Kong Polytechnic University<br/>Member, <a href="https://www.polyu.edu.hk/cbs/rclcn/">Research Center for Language, Cognition & Neuroscience</a><br/>Affiliated member, <a href="https://www.polyu.edu.hk/cbs/st/">the Speech Therapy Unit</a></p>
+			<p style="text-align: left;">Editorial Board member & co-editor for the "Language Processing" collection, <i>Scientific Reports</i><br/>Academic Editor, <i>PLOS ONE</i><br/>Associate Editor, <i>Frontiers in Psychology</i></p>
+            <p style="text-align: left;">Ph.D. in Linguistics (The Chinese University of Hong Kong)<br/>M.Phil. in Humanities (Hong Kong University of Science and Technology)<br/>B.A. in Chinese Language (Fudan University)</p>
+            <p style="text-align: left;"><b>Email: </b><a href="mailto:caicai.zhang@polyu.edu.hk">caicai.zhang@polyu.edu.hk</a></p>
+            <p style="text-align: left;"><b><a href="https://research.polyu.edu.hk/en/persons/caicai-zhang">Research Explorer</a>, <a href="https://scholar.google.com/citations?user=3muabuIAAAAJ&hl=en&oi=ao">Google Scholar</a>, <a href="https://www.researchgate.net/profile/Caicai-Zhang">ResearchGate</a></b></p>
+         </div>
+      </div>
+   </section>
+   <hr>
+</div>
 
 <section id="staff">
    <div class="page-header">
