--- a/people.html
+++ b/people.html
@@ -76,28 +76,28 @@
 
 
 <hr>
-
-
-<section id="staff">
-<div class="span8 offset1">
-   <div class="page-header">
-      <h3>Principal Investigator</h3>
-   </div>
-   <div class="row">
-      <div class="col-md-3">
-         <img src="thumbs/Photo_Quentin.jpeg" alt="Quentin" class="img-fluid" style="max-width: 150px; margin-right: 20px; float: left;"/>
-      </div>
-      <div class="col-md-9" style="clear: both;">
-         <h4>Quentin Zhen QIN 秦震 Ph.D.</h4>
-         <p>Quentin is an Assistant Professor of Linguistics in the Division of Humanities at the Hong Kong University of Science and Technology. He is also Associate Director of ​Center for Chinese Linguistics and a faculty associate of Center for Aging Science, HKUST. He got his Ph.D degree in Linguistics from the Department of Linguistics, University of Kansas. Prior to joining the faculty at HKUST, he worked as Postdoctoral Researcher at the Research Center for Language, Cognition, and Neuroscience, Hong Kong Polytechnic University.</p>
-         <p><b>Email:</b> <a href="mailto:hmzqin@ust.hk">hmzqin@ust.hk</a></p>
-         <p><b><a href="https://sites.google.com/site/qinzhenquentin/">Personal Website</a>, <a href="https://orcid.org/0000-0002-6117-7809">ORCID ID</a>, <a href="files/C.V._Zhen Qin_Research.pdf">Curriculum Vitae</a></b></p>
-      </div>
+<div class="row-fluid">
+   <div class="span8">
+      <section id="principalinvestigator">
+         <div class="page-header">
+            <h3>Principal Investigator</h3>
+         </div>
+         <div class="row-fluid">
+            <div class="span3 post">
+               <img src="thumbs/Photo_Quentin.jpeg" alt="Quentin Zhen QIN" style="max-width: 150px; margin-right: 20px;"/>
+            </div>
+            <div class="span8 offset">
+               <h4>Quentin Zhen QIN 秦震 Ph.D.</h4>
+               <p>Quentin is an Assistant Professor of Linguistics in the Division of Humanities at the Hong Kong University of Science and Technology. He is also Associate Director of ​Center for Chinese Linguistics and a faculty associate of Center for Aging Science, HKUST. He got his Ph.D degree in Linguistics from the Department of Linguistics, University of Kansas. Prior to joining the faculty at HKUST, he worked as Postdoctoral Researcher at the Research Center for Language, Cognition, and Neuroscience, Hong Kong Polytechnic University.</p>
+               <p><b>Email:</b> <a href="mailto:hmzqin@ust.hk">hmzqin@ust.hk</a></p>
+               <p><b><a href="https://sites.google.com/site/qinzhenquentin/">Personal Website</a>, <a href="https://orcid.org/0000-0002-6117-7809">ORCID ID</a>, <a href="files/C.V._Zhen Qin_Research.pdf">Curriculum Vitae</a></b></p>
+            </div>
+         </div>               
+      </section>
    </div>
 </div>
-</section>
-
 <hr>
+
 
 <section id="staff">
    <div class="page-header">
