--- a/people.html
+++ b/people.html
@@ -77,7 +77,7 @@
 
 <hr>
 <div class="row-fluid">
-   <div class="span8">
+   <div class="span12"> <!-- 修改这里的 span8 为 span12，使其占据整个页面的宽度 -->
       <section id="principalinvestigator">
          <div class="page-header">
             <h3>Principal Investigator</h3>
@@ -86,7 +86,7 @@
             <div class="span3 post">
                <img src="thumbs/Photo_Quentin.jpeg" alt="Quentin Zhen QIN" style="max-width: 150px; margin-right: 20px;"/>
             </div>
-            <div class="span8">
+            <div class="span9 offset"> <!-- 修改这里的 span10 为 span9，保持图片与文字比例 -->
                <h4 style="text-align: left;">Quentin Zhen QIN 秦震 Ph.D.</h4>
                <p>Quentin is an Assistant Professor of Linguistics in the Division of Humanities at the Hong Kong University of Science and Technology. He is also Associate Director of ​Center for Chinese Linguistics and a faculty associate of Center for Aging Science, HKUST. He got his Ph.D degree in Linguistics from the Department of Linguistics, University of Kansas. Prior to joining the faculty at HKUST, he worked as Postdoctoral Researcher at the Research Center for Language, Cognition, and Neuroscience, Hong Kong Polytechnic University.</p>
                <p><b>Email:</b> <a href="mailto:hmzqin@ust.hk">hmzqin@ust.hk</a></p>
@@ -97,6 +97,7 @@
    </div>
 </div>
 <hr>
+
 
 <hr>  
 <section id="staff">
