--- a/people.html
+++ b/people.html
@@ -122,7 +122,7 @@
             </div>
             <div class="row-fluid">
                <div class="span3 post">
-                  <img src="thumbs/Photo_Quentin.jpeg" alt="Quentin Zhen QIN" style="max-width: 150px; margin-right: 10px;"/>
+                  <img src="thumbs/Photo_Quentin.jpeg" alt="Quentin Zhen QIN"/>
                </div>
                <div class="span9 offset">
                   <h4 style="text-align: left;">Quentin Zhen QIN 秦震 Ph.D.</h4>
