--- a/people.html
+++ b/people.html
@@ -137,119 +137,97 @@
 </div> <!-- container 结束 -->
 <hr>
 
-
-
 <hr>  
 <section id="staff">
+   <div class="page-header">
+      <h3>Research Staff</h3>
+   </div>
    <div class="row-fluid">
-      <div class="span8">
-         <section id="researchstaff">
-            <div class="page-header">
-               <h3>Research Staff</h3>
-            </div>
-            <div class="row-fluid">
-               <div class="span3 post">
-                  <img src="thumbs/Photo_Susu.jpg" alt="Susu Lai" style="max-width: 150px; margin-right: 20px;"/>
-               </div>
-               <div class="span8 offset">
-                  <h4 style="text-align: left;">Susu LAI 賴素素 (BA: Hunan U; MA: HKU)</h4>
-                  <p><i>Lab Manager & Research Assistant</i></p>
-                  <p>Susu graduated from the University of Hong Kong with an MA degree in Linguistics. She has a strong interest in psycholinguistics, specifically understanding how individuals acquire and process the prosodic features of a second language. In her previous research project, she explored implicit learning of lexical stress in second language acquisition. She is currently involved in an EEG study on L2 learners' consolidation of Cantonese tones during daytime naps.</p>
-                  <p><b>Email:</b> <a href="mailto:hmsusu@ust.hk">hmsusu@ust.hk</a></p>
-                  <p><b><a href="https://www.researchgate.net/profile/Susu-Lai">ResearchGate</a>, <a href="files/CV_Susu_LAI.pdf">Curriculum Vitae</a></b></p>
-               </div>
-            </div>
-            <hr>
-            <div class="row-fluid">
-               <div class="span3 post">
-                  <img src="thumbs/Photo_Jiayu.jpg" alt="Jiayu Liang" style="max-width: 150px; margin-right: 20px;"/>
-               </div>
-               <div class="span8 offset">
-                  <h4 style="text-align: left;">Jiayu LIANG 梁家瑜 (BA: Shandong U)</h4>
-                  <p><i>Research Assistant</i></p>
-                  <p>Jiayu holds a BA in English from Shandong University. Her research interests focus on the production and perception of non-native languages, as well as the cross-domain transfer effects between music and language experience. For her undergraduate thesis, Jiayu employed eye-tracking methodology to investigate how Mandarin speakers' musical aptitude influences their perception and production of English vowels. Currently, she is involved in an eye-tracking study examining L2 learners' perceptual learning and consolidation of English lexical stress.</p>
-                  <p><b>Email:</b> <a href="mailto:hmjyliang@ust.hk">hmjyliang@ust.hk</a></p>
-                  <p><b><a href="https://lexie-liang.github.io/LiangJiayu.github.io/">Personal Website</a>, <a href="https://www.researchgate.net/profile/Jiayu-Liang-14">ResearchGate</a>, <a href="files/CV_Jiayu_LIANG.pdf">Curriculum Vitae</a></b></p>
-               </div>
-            </div>
-         </section>
+      <div class="span3">
+         <img src="thumbs/Photo_Susu.jpg" alt="Susu Lai" style="max-width: 150px; margin-right: 20px;" />
+      </div>
+      <div class="span9 offset">
+         <h4 style="text-align: left;">Susu LAI 賴素素  (BA: Hunan U; MA:HKU)</h4>
+         <p><i>Lab Manager & Research Assistant</i></p>
+         <p>Susu graduated from the University of Hong Kong with an MA degree in Linguistics. She has a strong interest in psycholinguistics, specifically understanding how individuals acquire and process the prosodic features of a second language. In her previous research project, she explored implicit learning of lexical stress in second language acquisition. She is currently involved in an EEG study on L2 learners' consolidation of Cantonese tones during daytime naps.</p>
+         <p><b>Email:</b> <a href="mailto:hmsusu@ust.hk">hmsusu@ust.hk</a></p>
+         <p><b><a href="https://www.researchgate.net/profile/Susu-Lai">ResearchGate</a>, <a href="files/CV_Susu LAI.pdf">Curriculum Vitae</a></b></p>
       </div>
    </div>
+   <hr>
+   <div class="row-fluid">
+      <div class="span3">
+         <img src="thumbs/Photo_Jiayu.jpg" alt="Jiayu Liang" style="max-width: 150px; margin-right: 20px;" />
+      </div>
+      <div class="span9 offset">
+         <h4 style="text-align: left;">Jiayu LIANG 梁家瑜  (BA: Shandong U)</h4>
+         <p><i>Research Assistant</i></p>
+         <p>Jiayu holds a BA in English from Shandong University. Her research interests focus on the production and perception of non-native languages, as well as the cross-domain transfer effects between music and language experience. For her undergraduate thesis, Jiayu employed eye-tracking methodology to investigate how Mandarin speakers' musical aptitude influences their perception and production of English vowels. Currently, she is involved in an eye-tracking study examining L2 learners' perceptual learning and consolidation of English lexical stress.</p>
+         <p><b>Email:</b> <a href="mailto:hmjyliang@ust.hk">hmjyliang@ust.hk</a></p>
+         <p><b><a href="https://lexie-liang.github.io/LiangJiayu.github.io/">Personal Website</a>, <a href="https://www.researchgate.net/profile/Jiayu-Liang-14">ResearchGate</a>, <a href="files/CV_Jiayu LIANG.pdf">Curriculum Vitae</a></b></p>
+      </div>
+   </div>
+   <hr>
 </section>
-
-<hr>
 
 <section id="student">
+   <div class="page-header">
+      <h3>Research Student</h3>
+   </div>
    <div class="row-fluid">
-      <div class="span8">
-         <section id="researchstudent">
-            <div class="page-header">
-               <h3>Research Student</h3>
-            </div>
-            <div class="row-fluid">
-               <div class="span3 post">
-                  <img src="thumbs/Photo_Jeremy.jpg" alt="Jeremy, Yin To CHUI" style="max-width: 150px; margin-right: 20px;"/>
-               </div>
-               <div class="span8 offset">
-                  <h4 style="text-align: left;">Jeremy, Yin To CHUI 徐彥韜 (BA: CUHK; MA: PolyU; MPhil: UST)</h4>
-                  <p><i>Ph.D Student (HKPFS awardee)</i></p>
-                  <p>Jeremy graduated with an MA degree in Teaching Chinese as a Foreign Language from HK PolyU. He is interested in speech perception as well as the cognitive and computational mechanisms behind perceptual learning. Currently, he is working on whether, and to what extent, younger and older adults make statistical inferences (e.g., distributional information, word-referent co-occurrences) in the implicit perceptual learning L2 lexical tone categories. His previous MPhil project studied the statistical learning of Mandarin lexical tones and how individual differences played a role in learning. Jeremy’s Ph.D study is funded by the Hong Kong PhD Fellowship.</p>
-                  <p><b>Email:</b> <a href="mailto:ytchuiac@connect.ust.hk">ytchuiac@connect.ust.hk</a></p>
-                  <p><b><a href="https://www.researchgate.net/profile/Yin-To-Chui">ResearchGate</a>, <a href="https://orcid.org/0000-0002-2169-086X">ORCID ID</a>, <a href="files/CV_Jeremy.pdf">Curriculum Vitae</a></b></p>
-               </div>
-            </div>
-            <hr>
-            <div class="row-fluid">
-               <div class="span3 post">
-                  <img src="thumbs/Photo_Yuqi.jpg" alt="Yuqi Wang" style="max-width: 150px; margin-right: 20px;"/>
-               </div>
-               <div class="span8 offset">
-                  <h4 style="text-align: left;">Yuqi WANG 王宇琪 (BA: Tianjin U; MPhil: UST)</h4>
-                  <p><i>Ph.D Student (HKPFS awardee)</i></p>
-                  <p>Yuqi graduated from Tianjin University with a BA Degree in English and from HKUST with an MPhil Degree in Humanities. She is interested in aging and the bilingual effect on cognition. She is now working on how language and other experiences (e.g., learning and using more than one language, music training, etc.) benefit one's cognitive abilities (e.g., attention and memory). Her MPhil thesis studied how individual bilingual experiences of younger Cantonese-English speakers influence the attentional control ability in a Forced-attention Dichotic Listening Task of Cantonese tones. Yuqi's PhD study is funded by the Hong Kong PhD Fellowship.</p>
-                  <p><b>Email:</b> <a href="mailto:ywangqi@connect.ust.hk">ywangqi@connect.ust.hk</a></p>
-                  <p><b><a href="https://www.researchgate.net/profile/Yuqi-Wang-98">ResearchGate</a>, <a href="https://orcid.org/0009-0000-1794-9747">ORCID ID</a>, <a href="files/CV_Yuqi.pdf">Curriculum Vitae</a></b></p>
-               </div>
-            </div>
-         </section>
+      <div class="span3">
+         <img src="thumbs/Photo_Jeremy.jpg" alt="Jeremy, Yin To CHUI" style="max-width: 150px; margin-right: 20px;" />
+      </div>
+      <div class="span9 offset">
+         <h4 style="text-align: left;">Jeremy, Yin To CHUI 徐彥韜 (BA: CUHK; MA: PolyU; MPhil: UST)</h4>
+         <p><i>Ph.D Student (HKPFS awardee)</i></p>
+         <p>Jeremy graduated with an MA degree in Teaching Chinese as a Foreign Language from HK PolyU. He is interested in speech perception as well as the cognitive and computational mechanisms behind perceptual learning. Currently, he is working on whether, and to what extent, younger and older adults make statistical inferences (e.g., distributional information, word-referent co-occurrences) in the implicit perceptual learning L2 lexical tone categories. His previous MPhil project studied the statistical learning of Mandarin lexical tones and how individual differences played a role in learning. Jeremy's Ph.D study is funded by the Hong Kong PhD Fellowship.</p>
+         <p><b>Email:</b> <a href="mailto:​ytchuiac@connect.ust.hk">​ytchuiac@connect.ust.hk</a></p>
+         <p><b><a href="https://www.researchgate.net/profile/Yin-To-Chui">ResearchGate</a>, <a href="https://orcid.org/0000-0002-2169-086X">ORCID ID</a>, <a href="files/CV_Jeremy.pdf">Curriculum Vitae</a></b></p>
       </div>
    </div>
-</section>
-
-<hr>
-
-<section id="student">
+   <hr>
    <div class="row-fluid">
-      <div class="span8">
-         <section id="pastmembers">
-            <div class="page-header">
-               <h3>Past Members and Alumni</h3>
-            </div>
-            <div class="row-fluid">
-               <div class="span3 post">
-                  <img src="thumbs/Photo_Cindy.png" alt="Cindy, Rui JIN" style="max-width: 150px; margin-right: 20px;"/>
-               </div>
-               <div class="span8 offset">
-                  <h4 style="text-align: left;">Cindy, Rui JIN 金蕊 (Senior Research Assistant, 2021-2022)</h4>
-                  <p>Cindy is currently a Ph.D student in Psychology at the University of Florida.</p>
-               </div>
-            </div>
-            <hr>
-            <div class="row-fluid">
-               <div class="span3 post">
-                  <img src="thumbs/Photo_Ruofan_edited.jpg" alt="Ruofan Wu" style="max-width: 150px; margin-right: 20px;"/>
-               </div>
-               <div class="span8 offset">
-                  <h4 style="text-align: left;">Ruofan WU 吳若繁 (Research Assistant, 2022-2023)</h4>
-                  <p>Ruofan is currently a Ph.D student at the Hong Kong Polytechnic University.</p>
-               </div>
-            </div>
-         </section>
+      <div class="span3">
+         <img src="thumbs/Photo_Yuqi.jpg" alt="Yuqi Wang" style="max-width: 150px; margin-right: 20px;" />
+      </div>
+      <div class="span9 offset">
+         <h4 style="text-align: left;">Yuqi WANG 王宇琪 (BA: Tianjin U; MPhil: UST)</h4>
+         <p><i>Ph.D Student (HKPFS awardee)</i></p>
+         <p>Yuqi graduated from Tianjin University with a BA Degree in English and from HKUST with an MPhil Degree in Humanities. She is interested in aging and the bilingual effect on cognition. She is now working on how language and other experiences (e.g., learning and using more than one language, music training, etc.) benefit one's cognitive abilities (e.g., attention and memory). Her MPhil thesis studied how individual bilingual experiences of younger Cantonese-English speakers influence the attentional control ability in a Forced-attention Dichotic Listening Task of Cantonese tones. Yuqi's Ph.D study is funded by the Hong Kong PhD Fellowship.</p>
+         <p><b>Email:</b> <a href="mailto:ywangqi@connect.ust.hk">ywangqi@connect.ust.hk</a></p>
+         <p><b><a href="https://www.researchgate.net/profile/Yuqi-Wang-98">ResearchGate</a>, <a href="https://orcid.org/0009-0000-1794-9747​">ORCID ID</a>, <a href="files/CV_Yuqi.pdf">Curriculum Vitae</a></b></p>
       </div>
    </div>
+   <hr>
 </section>
 
-<hr>
+<section id="alumni">
+   <div class="page-header">
+      <h3>Past Members and Alumni</h3>
+   </div>
+   <div class="row-fluid">
+      <div class="span3">
+         <img src="thumbs/Photo_Cindy.png" alt="Cindy, Rui JIN" style="max-width: 150px; margin-right: 20px;" />
+      </div>
+      <div class="span9 offset">
+         <h4 style="text-align: left;">Cindy, Rui JIN 金蕊  (Senior Research Assistant, 2021-2022)</h4>
+         <p>Cindy is currently a Ph.D student in Psychology at the University of Florida.</p>
+      </div>
+   </div>
+   <hr>
+   <div class="row-fluid">
+      <div class="span3">
+         <img src="thumbs/Photo_Ruofan_edited.jpg" alt="Ruofan Wu" style="max-width: 150px; margin-right: 20px;" />
+      </div>
+      <div class="span9 offset">
+         <h4 style="text-align: left;">Ruofan WU 吳若繁 (Research Assistant, 2022-2023)</h4>
+         <p>Ruofan is currently a Ph.D student at the Hong Kong Polytechnic University.</p>
+      </div>
+   </div>
+   <hr>
+</section>
+
 
 <!-- jQuery -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
