--- a/people.html
+++ b/people.html
@@ -100,6 +100,7 @@
                   <img src="files/ICPhS 2023.jpg" class="carousel-image" alt="">
                   <div class="carousel-caption">
                      <h4>ICPhS 2023 at Prague</h4>
+                  
                   </div>
                      <div class="item active">
                         <img src="files/Photo1.jpg" class="carousel-image" alt="">                      
@@ -162,7 +163,7 @@
                               <div class="carousel-caption">
                                  <h4>2024 Yuqi's MPhil thesis defense</h4>
                               </div>
-                     </div>
+                           </div>
                </div>
 
                <!-- 其他项目继续... -->
@@ -200,7 +201,7 @@
    </div>
 
 </div> <!-- container 结束 -->
-<hr>
+
 
 <hr>  
 <section id="staff">
@@ -209,7 +210,7 @@
    </div>
    <div class="row-fluid">
       <div class="span3">
-         <img src="thumbs/Photo_Susu.jpg" alt="Susu Lai" style="max-width: 150px; margin-right: 20px;" />
+         <img src="thumbs/Photo_Susu.jpg" alt="Susu Lai" />
       </div>
       <div class="span9 offset">
          <h4 style="text-align: left;">Susu LAI 賴素素  (BA: Hunan U; MA:HKU)</h4>
@@ -222,7 +223,7 @@
    <hr>
    <div class="row-fluid">
       <div class="span3">
-         <img src="thumbs/Photo_Jiayu.jpg" alt="Jiayu Liang" style="max-width: 150px; margin-right: 20px;" />
+         <img src="thumbs/Photo_Jiayu.jpg" alt="Jiayu Liang"/>
       </div>
       <div class="span9 offset">
          <h4 style="text-align: left;">Jiayu LIANG 梁家瑜  (BA: Shandong U)</h4>
