--- a/people.html
+++ b/people.html
@@ -100,14 +100,15 @@
                   <img src="files/ICPhS 2023.jpg" class="carousel-image" alt="">
                   <div class="carousel-caption">
                      <h4>ICPhS 2023 at Prague</h4>
-                  
-               </div>
-                  <div class="item active">
-                     <img src="files/Photo1.jpg" class="carousel-image" alt="">                      
-                     <div class="carousel-caption">
-                        <h4>2022 Farewell Lunch</h4>
-                     </div>
                   </div>
+               </div>
+
+               <div class="item">
+                  <img src="files/Photo1.jpg" class="carousel-image" alt="">                      
+                  <div class="carousel-caption">
+                     <h4>2022 Farewell Lunch</h4>
+                  </div>
+               </div>
 
               <div class="item">
                            <img src="files/Photo2.png" class="carousel-image" alt="">
