--- a/people.html
+++ b/people.html
@@ -191,19 +191,10 @@
    </div>
    <div class="row-fluid">
       <div class="span3">
-<div class="row-fluid">
-   <div class="span12">
-      <section id="principalinvestigator">
-         <div class="page-header">
-            <h3>Principal Investigator</h3>
-         </div>
-         <div class="row-fluid">
-            <div class="span3 post">
-      
-         <img src="thumbs/Photo_Susu.jpg" alt="Susu Lai" />
+         <img src="thumbs/Photo_Susu.jpg" alt="Susu Lai"/>
       </div>
       <div class="span9 offset">
-         <h4 style="text-align: left;">Susu LAI 賴素素  (BA: Hunan U; MA:HKU)</h4>
+         <h4 style="text-align: left;">Susu LAI 賴素素 (BA: Hunan U; MA: HKU)</h4>
          <p><i>Lab Manager & Research Assistant</i></p>
          <p>Susu graduated from the University of Hong Kong with an MA degree in Linguistics. She has a strong interest in psycholinguistics, specifically understanding how individuals acquire and process the prosodic features of a second language. In her previous research project, she explored implicit learning of lexical stress in second language acquisition. She is currently involved in an EEG study on L2 learners' consolidation of Cantonese tones during daytime naps.</p>
          <p><b>Email:</b> <a href="mailto:hmsusu@ust.hk">hmsusu@ust.hk</a></p>
@@ -216,7 +207,7 @@
          <img src="thumbs/Photo_Jiayu.jpg" alt="Jiayu Liang"/>
       </div>
       <div class="span9 offset">
-         <h4 style="text-align: left;">Jiayu LIANG 梁家瑜  (BA: Shandong U)</h4>
+         <h4 style="text-align: left;">Jiayu LIANG 梁家瑜 (BA: Shandong U)</h4>
          <p><i>Research Assistant</i></p>
          <p>Jiayu holds a BA in English from Shandong University. Her research interests focus on the production and perception of non-native languages, as well as the cross-domain transfer effects between music and language experience. For her undergraduate thesis, Jiayu employed eye-tracking methodology to investigate how Mandarin speakers' musical aptitude influences their perception and production of English vowels. Currently, she is involved in an eye-tracking study examining L2 learners' perceptual learning and consolidation of English lexical stress.</p>
          <p><b>Email:</b> <a href="mailto:hmjyliang@ust.hk">hmjyliang@ust.hk</a></p>
@@ -232,7 +223,7 @@
    </div>
    <div class="row-fluid">
       <div class="span3">
-         <img src="thumbs/Photo_Jeremy.jpg" alt="Jeremy, Yin To CHUI" style="max-width: 150px; margin-right: 20px;" />
+         <img src="thumbs/Photo_Jeremy.jpg" alt="Jeremy, Yin To CHUI"/>
       </div>
       <div class="span9 offset">
          <h4 style="text-align: left;">Jeremy, Yin To CHUI 徐彥韜 (BA: CUHK; MA: PolyU; MPhil: UST)</h4>
@@ -245,7 +236,7 @@
    <hr>
    <div class="row-fluid">
       <div class="span3">
-         <img src="thumbs/Photo_Yuqi.jpg" alt="Yuqi Wang" style="max-width: 150px; margin-right: 20px;" />
+         <img src="thumbs/Photo_Yuqi.jpg" alt="Yuqi Wang"/>
       </div>
       <div class="span9 offset">
          <h4 style="text-align: left;">Yuqi WANG 王宇琪 (BA: Tianjin U; MPhil: UST)</h4>
@@ -264,17 +255,17 @@
    </div>
    <div class="row-fluid">
       <div class="span3">
-         <img src="thumbs/Photo_Cindy.png" alt="Cindy, Rui JIN" style="max-width: 150px; margin-right: 20px;" />
+         <img src="thumbs/Photo_Cindy.png" alt="Cindy, Rui JIN"/>
       </div>
       <div class="span9 offset">
-         <h4 style="text-align: left;">Cindy, Rui JIN 金蕊  (Senior Research Assistant, 2021-2022)</h4>
+         <h4 style="text-align: left;">Cindy, Rui JIN 金蕊 (Senior Research Assistant, 2021-2022)</h4>
          <p>Cindy is currently a Ph.D student in Psychology at the University of Florida.</p>
       </div>
    </div>
    <hr>
    <div class="row-fluid">
       <div class="span3">
-         <img src="thumbs/Photo_Ruofan_edited.jpg" alt="Ruofan Wu" style="max-width: 150px; margin-right: 20px;" />
+         <img src="thumbs/Photo_Ruofan_edited.jpg" alt="Ruofan Wu"/>
       </div>
       <div class="span9 offset">
          <h4 style="text-align: left;">Ruofan WU 吳若繁 (Research Assistant, 2022-2023)</h4>
@@ -283,6 +274,7 @@
    </div>
    <hr>
 </section>
+
 
 
 <!-- jQuery -->
